# universal-file-reader-mcp

./: .dockerignore  .env.example  .gitignore  DOCKER_USAGE.md  Dockerfile  Dockerfile.prod  LICENSE  README.md  README_KO.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  test_client.py  test_simple.py
src/document_reader/: __init__.py  api_server.py  mcp_server.py  processor_factory.py
src/document_reader/core/: config.py  exceptions.py  logging_config.py  models.py  utils.py  validators.py
src/document_reader/processors/: __init__.py  base_processor.py  csv_processor.py  excel_processor.py  ocr_processor.py  pdf_processor.py
src/document_reader/utils/: config.py
test_files/: test.csv
tests/: test_config.py  test_file_validator.py  test_processor_factory.py
